# genetic-stock

./: CMakeLists.txt  README.md
src/: DNA.cpp  DNA.h  main.cpp
